# nlp-topics-clf

./: Dockerfile  README.md  client.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/src/: predict.py  processing.py
notebooks/: dataset.ipynb  test.ipynb  train.ipynb
